--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,8 +1,8 @@
-gpu: 'cuda:0'
+gpu: 'cuda:1'
 ---
 train:
-  epoch: 20
-  batch_size: 19
+  epoch: 300
+  batch_size: 12
   num_workers: 16
   optimizer: 'adam'
   adam: 0.0001
@@ -11,7 +11,6 @@ train:
     final: 0.05
   frame_num: 128
   fs: 16
-  exp_day: 1027
   SNR:
     - 0
     - -5
@@ -40,6 +39,7 @@ data:
   pkl : '/home/nas/user/kbh/Chime_MLDR/pkl/'
 ---
   log:
+    root: '/home/nas/user/kbh/DCUNet/logs/'
     chkpt_dir: 'chkpt'
     log_dir  : 'logs'
 ---
@@ -58,10 +58,4 @@ audio:
   n_fft: 1200
   num_freq: 601 # n_fft//2 + 1
   sample_rate: 16000
-  hop_length: 160
-  win_length: 400
-  min_level_db: -100.0
-  ref_level_db: 20.0
-  preemphasis: 0.97
-  power: 0.30
 
