--- a/config/DNN2_v1.yaml
+++ b/config/DNN2_v1.yaml
@@ -1,12 +1,9 @@
 gpu: 'cuda:1'
 ---
-eval:
-  type: 'cplx'  # cplx, mag
----
 train:
   epoch: 50
   batch_size: 12
-  num_workers: 16
+  num_workers: 64
   optimizer: 'adam'
   adam: 0.0001
   adabound:
@@ -21,7 +18,6 @@ train:
   summary_interval: 10
   validation_interval: 100
   checkpoint_interval: 1000
-  type: 'R' # R,C
 ---
 loss:
   type: 'wSDR'
@@ -38,9 +34,7 @@ scheduler: # Plateau, oneCycle, None
 ---
 data:
   test_train_ratio: 0.2
-  root: '/home/nas/user/kbh/Chime_MLDR/'
-  wav : '/home/nas/user/kbh/Chime_MLDR/wav/'
-  pkl : '/home/nas/user/DCUNet/CHiME4'
+  pkl : '/home/kbh/DB/CHiME4/'
 ---
   log:
     root: '/home/nas/user/kbh/DCUNet/logs/'
